# VoWiFi

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  VoWiFi2.pro  readme.txt
inc/: commFunc.h  commdatadef.h  httpmsg.h  jpAudioMng.h  jpNetSDK.h  jpsdk.h  ping.h
script/: run.sh
src/: commFunc.cpp  httpmsg.cpp  jpAudioMng.cpp  jpNetSDK.cpp  jpsdk.cpp  main.cpp  ping.cpp
third/juphoon/include/mme/: zmf.h  zmf_audio.h  zmf_codec.h  zmf_dev.h  zmf_ext.h  zmf_sensor.h  zmf_utils.h  zmf_video.h
third/juphoon/include/service/rcs/: mtc.h  mtc_acv.h  mtc_acv_db.h  mtc_buddy.h  mtc_buddy_blk.h  mtc_buddy_cb.h  mtc_buddy_pnb.h  mtc_buddy_rvk.h  mtc_call.h  mtc_call_cb.h  mtc_call_cfg.h  mtc_call_db.h  mtc_cap.h  mtc_cap_cb.h  mtc_cap_db.h  mtc_cli.h  mtc_cli_cb.h  mtc_cli_cfg.h  mtc_cli_db.h  mtc_conf.h  mtc_conf_cb.h  mtc_conf_cmcc.h  mtc_conf_cmcc_cb.h  mtc_conf_db.h  mtc_cp.h  mtc_cp_cb.h  mtc_cp_db.h  mtc_cprof.h  mtc_cprof_cb.h  mtc_d2.h  mtc_doodle.h  mtc_gab.h  mtc_gba.h  mtc_gba_cb.h  mtc_grp.h  mtc_grp_cb.h  mtc_gs_cb.h  mtc_gs_db.h  mtc_gs_ginfo.h  mtc_im.h  (+55 more)
third/juphoon/include/zos/: zjson.h  zos_osenv.h  zos_type.h
third/openssl/inc/openssl/: opensslconf.h
third/rapidjson/inc/rapidjson/: rapidjson.h
